--- a/order/style.css
+++ b/order/style.css
@@ -98,10 +98,10 @@ button { cursor: pointer; }
   font-size: 1rem;
   padding: 10px 8px;
   border-radius: 10px;
-  background: #dbff7842;
-  color: #333;
+  background: #dff5a4;
+  color: #061101de;
   border: 1px solid #76960d;
-  box-shadow: 0 4px 7px rgba(126, 167, 5, 0.788);
+  box-shadow: 0 2px 5px rgba(157, 199, 33, 0.788);
   transition: transform .12s ease, box-shadow .12s ease, background .2s ease, color .2s ease;
   white-space: nowrap;
 }
