--- a/order/style.css
+++ b/order/style.css
@@ -237,6 +237,7 @@ textarea { resize: vertical; }
 }
 .inline input[type="radio"]:checked + span,
 .inline label:hover {
+  color: #ffffff;
   background: #07CC1C;
   border-color: #64da15;
   box-shadow: 0 2px 8px rgba(255,122,0,.15);
